--- a/fig/fig_Repetabilite_V1/tex/fig_Repetabilite_V1.tex
+++ b/fig/fig_Repetabilite_V1/tex/fig_Repetabilite_V1.tex
@@ -11,7 +11,7 @@
     ylabel={\'Ecart de température $\tau$ [\unit{\degreeCelsius}]},
     xmin=0,xmax=1200,
 %	ymin=-35,ymax=15,
-    xtick={0,600,1200,1800,2400,2700},%ytick={0,9.1120/100000,1.4452/10000,2.5/10000,5/10000,1/1000},
+    xtick={0,300,...,1200},%ytick={0,9.1120/100000,1.4452/10000,2.5/10000,5/10000,1/1000},
     domain=0:100,
     legend style = {at={(1.01,.05)},anchor = south east,rounded corners},legend columns=3,
     ]
