--- a/fig/fig_ConvNat_Acou/tex/fig_Acou_AHXin_H1H2_Mid.tex
+++ b/fig/fig_ConvNat_Acou/tex/fig_Acou_AHXin_H1H2_Mid.tex
@@ -1,6 +1,6 @@
 \begin{tikzpicture}
     \def\width{.9*\textwidth};
-    \def\height{.5*\width};
+    \def\height{.25*\textheight};
     \def\legx{.5cm};
     \def\legy{\legx};
     
@@ -11,7 +11,8 @@
     ylabel={\'Ecart de température $\tau$ [\unit{\degreeCelsius}]},
     xmin=0,xmax=2700,
 	ymin=-35,ymax=15,
-    xtick={0,600,1200,1800,2400,2700},%ytick={0,9.1120/100000,1.4452/10000,2.5/10000,5/10000,1/1000},
+    xtick={0,600,1200,1800,2400,2700},
+    ytick={-30,-20,...,10},
     domain=0:100,
     legend style = {at={(1.01,.05)},anchor = south east,rounded corners},legend columns=3,
     ]
