--- a/fig/fig_ConvNat_Acou/tex/fig_Acou_AHXin_V1V2_High.tex
+++ b/fig/fig_ConvNat_Acou/tex/fig_Acou_AHXin_V1V2_High.tex
@@ -1,6 +1,6 @@
 \begin{tikzpicture}
     \def\width{.9*\textwidth};
-    \def\height{.5*\width};
+    \def\height{.25*\textheight};
     \def\legx{.5cm};
     \def\legy{\legx};
     
@@ -11,9 +11,10 @@
     ylabel={\'Ecart de température $\tau$ [\unit{\degreeCelsius}]},
     xmin=0,xmax=3500,
 	ymin=-45,ymax=45,
-    xtick={0,600,1200,1800,2400,3000,3500},%ytick={0,9.1120/100000,1.4452/10000,2.5/10000,5/10000,1/1000},
+    xtick={0,600,1200,1800,2400,3000,3500},
+    ytick={-40,-20,...,40},
     domain=0:100,
-    legend style = {at={(1.01,.05)},anchor = south east,rounded corners},legend columns=3,
+    legend style = {at={(1.01,.025)},anchor = south east,rounded corners},legend columns=3,
     ]
     	
     	\addlegendimage{legend image with text=}
