--- a/fig/fig_ConvNat_Acou/tex/fig_Acou_CHXin_V1V2_Low.tex
+++ b/fig/fig_ConvNat_Acou/tex/fig_Acou_CHXin_V1V2_Low.tex
@@ -1,6 +1,6 @@
 \begin{tikzpicture}
     \def\width{.9*\textwidth};
-    \def\height{.5*\width};
+    \def\height{.25*\textheight};
     \def\legx{.5cm};
     \def\legy{\legx};
         
