--- a/fig/fig_ConvNat_Acou/tex/fig_Acou_Regmid_V1V2_Mid.tex
+++ b/fig/fig_ConvNat_Acou/tex/fig_Acou_Regmid_V1V2_Mid.tex
@@ -1,6 +1,6 @@
 \begin{tikzpicture}
     \def\width{.9*\textwidth};
-    \def\height{.5*\width};
+    \def\height{.25*\textheight};
     \def\legx{.5cm};
     \def\legy{\legx};
     
@@ -11,7 +11,8 @@
     ylabel={\'Ecart de température $\tau$ [\unit{\degreeCelsius}]},
     xmin=0,xmax=3500,
 	ymin=-40,ymax=25,
-    xtick={0,600,1200,1800,2400,3000,3500},%ytick={0,9.1120/100000,1.4452/10000,2.5/10000,5/10000,1/1000},
+    xtick={0,600,1200,1800,2400,3000,3500},
+    ytick={-40,-30,...,30},
     domain=0:100,
     legend style = {at={(1.01,.05)},anchor = south east,rounded corners},legend columns=3,
     ]
